--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = Wallpaper-Automata
+name = WallpaperAutomata
 version = 0.0.1
 description = 'Auto set wallpaper for Gnome'
 author = 'Fernando Cruz'
@@ -8,7 +8,8 @@ author_email = 'quattrococodrilo@gmail.com'
 [options]
 packages = find:
 install_requires =
-    request
+    requests
+    pyyaml
 
 [options.packages.find]
 exclude=
