--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,13 @@ packages = find:
 install_requires =
     requests
     pyyaml
+    mypy
+    types-requests
 
 [options.packages.find]
 exclude=
     test*
+
+[options.entry_points]
+console_scripts=
+    paper=WallpaperAutomata.bin.cron:papper
