--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,4 @@ exclude=
 
 [options.entry_points]
 console_scripts=
-    paper=WallpaperAutomata.bin.cron:papper
+    paper=WallpaperAutomata.bin.entry_point:exec
